--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/passport-google-oauth20": "^2.0.16",
     "@types/pg": "^8.11.11",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
@@ -52,6 +53,7 @@
     "cmdk": "^1.0.0",
     "connect-pg-simple": "^10.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "embla-carousel-react": "^8.3.0",
@@ -64,6 +66,7 @@
     "memorystore": "^1.6.7",
     "openai": "^4.86.2",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.3",
     "python-shell": "^5.0.0",
