--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/multer": "^1.4.12",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/pg": "^8.11.11",
     "bcryptjs": "^3.0.2",
@@ -64,6 +65,7 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
+    "multer": "^1.4.5-lts.2",
     "openai": "^4.86.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
